--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -45,6 +45,21 @@
 	    {% endfor %}
 	  </nav>
 	</ul>
+
+	<ul class="nav">
+		<li class="nav-title">Tags</li>
+		{% for category in site.tags  %}
+		<h3>{{ tag[0] }}</h3>
+		<ul>
+		  {% for post in tag[1] %}
+			<li><a href="{{ post.url }}">{{ post.title }}</a></li>
+		  {% endfor %}
+		</ul>
+	{% endfor %}
+  </nav>
+</ul>
+
+
 </div>
 
 <div class="sidebar-item sidebar-footer">
